refactor: monorepo 结构优化 + healthcheck 统一 + CI 完善